[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/ani_earth_explode.png" type="Texture" id=1]
[ext_resource path="res://assets/background_space.png" type="Texture" id=2]
[ext_resource path="res://ui/LoseScreen.gd" type="Script" id=3]
[ext_resource path="res://utils/ButtonChangeScene.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/themes/DarkRed.tres" type="Theme" id=5]
[ext_resource path="res://assets/sfx/Explosion.wav" type="AudioStream" id=6]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 700, 700 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 700, 0, 700, 700 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1400, 0, 700, 700 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2100, 0, 700, 700 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2800, 0, 700, 700 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 3500, 0, 700, 700 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 4200, 0, 700, 700 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 4900, 0, 700, 700 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 5600, 0, 700, 700 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 6300, 0, 700, 700 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 7000, 0, 700, 700 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 7700, 0, 700, 700 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 8400, 0, 700, 700 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 9100, 0, 700, 700 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), null ],
"loop": false,
"name": "default",
"speed": 7.0
} ]

[node name="LoseScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1222, -283 )
theme = ExtResource( 5 )
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 3500.0
margin_bottom = 2100.0
texture = ExtResource( 2 )

[node name="EarthExplode" type="AnimatedSprite" parent="."]
position = Vector2( 511, 305 )
frames = SubResource( 15 )

[node name="Tween" type="Tween" parent="."]

[node name="V" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 600.0
margin_bottom = 600.0
alignment = 1

[node name="Time" type="Label" parent="V"]
margin_top = 246.0
margin_right = 1024.0
margin_bottom = 279.0
align = 1

[node name="ChangeScene" type="Button" parent="V"]
margin_left = 462.0
margin_top = 283.0
margin_right = 562.0
margin_bottom = 316.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Retry"
script = ExtResource( 4 )
next_scene = "res://scenes/Demo.tscn"

[node name="ChangeScene2" type="Button" parent="V"]
margin_left = 462.0
margin_top = 320.0
margin_right = 562.0
margin_bottom = 353.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Menu"
script = ExtResource( 4 )
next_scene = "res://ui/Menu.tscn"

[node name="ExplosionSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[connection signal="animation_finished" from="EarthExplode" to="." method="_on_EarthExplode_animation_finished"]
[connection signal="frame_changed" from="EarthExplode" to="." method="_on_EarthExplode_frame_changed"]
